# mageNES

./: .gitignore  .todo  CMakeLists.txt  README.md  main.cpp
cmake/: FindSDL2.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
src/: cpu.cpp  cpu.h  engine.cpp  engine.h  main.cpp  ram.cpp  ram.h  rom.cpp  rom.h
